// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toHydrationLoadersApplied with hydrated components should apply correct hydration loaders when hydrate is eager 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point data-s-id=\\"0\\">
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-id=\\"1\\">
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-id=\\"2\\">
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>

<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import Component0 from \\"not-important.jsx\\";
    import eagerLoader0 from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader0({ 
      id: \\"0\\",
      Component: Component0,
      props: {},
    });
  </script>
<script type=\\"module\\">
    import Component1 from \\"not-important.jsx\\";
    import eagerLoader1 from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader1({ 
      id: \\"1\\",
      Component: Component1,
      props: {},
    });
  </script>
<script type=\\"module\\">
    import Component2 from \\"not-important.jsx\\";
    import eagerLoader2 from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader2({ 
      id: \\"2\\",
      Component: Component2,
      props: {},
    });
  </script></body>
</html>"
`;

exports[`toHydrationLoadersApplied with hydrated components should apply correct hydration loaders when hydrate is lazy 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point data-s-id=\\"0\\">
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-id=\\"1\\">
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-id=\\"2\\">
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>

<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import lazyLoader0 from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader0({ 
      id: \\"0\\",
      componentImporter: async () => await import(\\"not-important.jsx\\"),
      props: {},
    });
  </script>
<script type=\\"module\\">
    import lazyLoader1 from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader1({ 
      id: \\"1\\",
      componentImporter: async () => await import(\\"not-important.jsx\\"),
      props: {},
    });
  </script>
<script type=\\"module\\">
    import lazyLoader2 from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader2({ 
      id: \\"2\\",
      componentImporter: async () => await import(\\"not-important.jsx\\"),
      props: {},
    });
  </script></body>
</html>"
`;

exports[`toHydrationLoadersApplied with hydrated components should apply correct props based on componentAttrStore 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point data-s-id=\\"0\\">
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-id=\\"1\\">
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-id=\\"2\\">
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>

<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import Component0 from \\"nav.jsx\\";
    import eagerLoader0 from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader0({ 
      id: \\"0\\",
      Component: Component0,
      props: {firstProp:'nice',secondProp:42,thirdProp:false,helper() {
  return 'Testing non-JSON properties';
}},
    });
  </script>
<script type=\\"module\\">
    import lazyLoader1 from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader1({ 
      id: \\"1\\",
      componentImporter: async () => await import(\\"nested/Heading.jsx\\"),
      props: {text:{weight:'bold',content:'Welcome to the site'}},
    });
  </script>
<script type=\\"module\\">
    import lazyLoader2 from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader2({ 
      id: \\"2\\",
      componentImporter: async () => await import(\\"index.jsx\\"),
      props: {list:['Have a nice day world']},
    });
  </script></body>
</html>"
`;
